devops/k8s/worker-service.yml
kind: Service
apiVersion: v1
metadata:
  name: worker-service
  labels:
    app: workerservice
spec:
  selector:
    app: workerservice
  ports:
  - protocol: TCP
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  labels:
    app: workerservice
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: workerservice
  template:
    metadata:
      labels:
        app: workerservice
    spec:
      containers:
      - name: workerservice
        image: 783560535431.dkr.ecr.ap-southeast-1.amazonaws.com/worker-service:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
