devops/k8s/ingress-eks.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
    component: frontend
  name: ingress-webapi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # your subnets of instance, public subnets of EKS
    alb.ingress.kubernetes.io/subnets: subnet-0093fb575ee1d37aa,subnet-0042256c83c9feff1,subnet-0eb3f45b67fbb5d31
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: 'eks-alb'
spec:
  rules:
  - http:
      paths:
      - path: /catalog-api
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80
      - path: /basket-api
        pathType: Prefix
        backend:
          service:
            name: basket-api
            port:
              number: 80

      - path: /order-api
        pathType: Prefix
        backend:
          service:
            name: order-api
            port:
              number: 80
